2003-02-18  Vince Darley <vincentdarley@sourceforge.net>

	* generic/vfs.c:
        * library/*.tcl: clean up of posix error handling.

        * doc/vfs.n: added some more documentation.
	
2003-02-18  Vince Darley <vincentdarley@sourceforge.net>

	* generic/vfs.c: added 'vfs::filesystem posixerror' command
	to allow direct reporting of posix error codes to Tcl.
	* library/vfsUtils.tcl: added support for state switching
	between "readonly", "translucent" and "readwrite".
	* library/mk4vfs.tcl: 
	* library/tarvfs.tcl:
	* library/zipvfs.tcl:
	* library/httpvfs.tcl: added support for proper reporting
	of read-only status of filesystem
	* library/tclIndex:  regen.
	
        You can now switch an mk4 filesystem between translucent and
	readonly with 'vfs::attributes $mount -state readonly'. All
	errors etc are correctly reported as if the filesystem is
	read-only.
	
2003-02-17  Vince Darley <vincentdarley@sourceforge.net>

	* library/vfsUtils.tcl: added beginnings of interface for
	filesystem configuration.
	* library/mk4vfs.tcl: 
	* library/tclIndex:  regen.
	
2003-02-01  Jean-Claude Wippler  <jcw@equi4.com>

	* library/vfslib.tcl: fixed bug in new vfs::zstream code,
	preventing forward seeking from working properly
	* library/starkit.tcl: recognize if launched as NT service

2003-02-08  Vince Darley <vincentdarley@sourceforge.net>

	* library/*.tcl: made all 'matchindirectory' implementations
	robust to whether they are passed a directory with a trailing
	file-separator or not.  (Tcl doesn't document whether there
	will be one, and optimisations to Tcl's filesystem require
	this flexibility.  Also the use of 'file join' will actually
	make the entire filesystem *more* efficient soon).
	
2003-02-06  Andreas Kupries  <andreask@activestate.com>

	* tclconfig/tcl.m4: Added SC_TCL_EARLY_FLAGS and
	* configure.in:     SC_TCL64BIT_FLAGS, copied from the Tcl
	* configure:        configuration. Usage prevents mismatch