@@ -9,6 +9,8 @@
 set auto_index(::vfs::ftp::Mount) [list source [file join $dir ftpvfs.tcl]]
 set auto_index(::vfs::ftp::Unmount) [list source [file join $dir ftpvfs.tcl]]
 set auto_index(::vfs::ftp::handler) [list source [file join $dir ftpvfs.tcl]]
+set auto_index(::vfs::ftp::attributes) [list source [file join $dir ftpvfs.tcl]]
+set auto_index(::vfs::ftp::state) [list source [file join $dir ftpvfs.tcl]]
 set auto_index(::vfs::ftp::stat) [list source [file join $dir ftpvfs.tcl]]
 set auto_index(::vfs::ftp::access) [list source [file join $dir ftpvfs.tcl]]
 set auto_index(::vfs::ftp::open) [list source [file join $dir ftpvfs.tcl]]
@@ -35,6 +37,8 @@ set auto_index(::vfs::http::fileattributes) [list source [file join $dir httpvfs
 set auto_index(::vfs::http::utime) [list source [file join $dir httpvfs.tcl]]
 set auto_index(::vfs::mk4::Mount) [list source [file join $dir mk4vfs.tcl]]
 set auto_index(::vfs::mk4::Unmount) [list source [file join $dir mk4vfs.tcl]]
+set auto_index(::vfs::mk4::attributes) [list source [file join $dir mk4vfs.tcl]]
+set auto_index(::vfs::mk4::commit) [list source [file join $dir mk4vfs.tcl]]
 set auto_index(::vfs::mk4::state) [list source [file join $dir mk4vfs.tcl]]
 set auto_index(::vfs::mk4::handler) [list source [file join $dir mk4vfs.tcl]]
 set auto_index(::vfs::mk4::utime) [list source [file join $dir mk4vfs.tcl]]
@@ -47,10 +51,8 @@ set auto_index(::vfs::mk4::removedirectory) [list source [file join $dir mk4vfs.
 set auto_index(::vfs::mk4::deletefile) [list source [file join $dir mk4vfs.tcl]]
 set auto_index(::vfs::mk4::fileattributes) [list source [file join $dir mk4vfs.tcl]]
 set auto_index(::mk4vfs::init) [list source [file join $dir mk4vfs.tcl]]
-set auto_index(::mk4vfs::mount) [list source [file join $dir mk4vfs.tcl]]
 set auto_index(::mk4vfs::_mount) [list source [file join $dir mk4vfs.tcl]]
 set auto_index(::mk4vfs::periodicCommit) [list source [file join $dir mk4vfs.tcl]]
-set auto_index(::mk4vfs::umount) [list source [file join $dir mk4vfs.tcl]]
 set auto_index(::mk4vfs::_umount) [list source [file join $dir mk4vfs.tcl]]
 set auto_index(::mk4vfs::stat) [list source [file join $dir mk4vfs.tcl]]
 set auto_index(::mk4vfs::do_close) [list source [file join $dir mk4vfs.tcl]]
@@ -59,6 +61,8 @@ set auto_index(::mk4vfs::mkdir) [list source [file join $dir mk4vfs.tcl]]
 set auto_index(::mk4vfs::getdir) [list source [file join $dir mk4vfs.tcl]]
 set auto_index(::mk4vfs::mtime) [list source [file join $dir mk4vfs.tcl]]
 set auto_index(::mk4vfs::delete) [list source [file join $dir mk4vfs.tcl]]
+set auto_index(::mk4vfs::mount) [list source [file join $dir mk4vfs.tcl]]
+set auto_index(::mk4vfs::umount) [list source [file join $dir mk4vfs.tcl]]
 set auto_index(loadvfs) [list source [file join $dir pkgIndex.tcl]]
 set auto_index(::starkit::header) [list source [file join $dir starkit.tcl]]
 set auto_index(::starkit::startup) [list source [file join $dir starkit.tcl]]
@@ -68,6 +72,8 @@ set auto_index(::starkit::panic) [list source [file join $dir starkit.tcl]]
 set auto_index(::vfs::tar::Mount) [list source [file join $dir tarvfs.tcl]]
 set auto_index(::vfs::tar::Unmount) [list source [file join $dir tarvfs.tcl]]
 set auto_index(::vfs::tar::handler) [list source [file join $dir tarvfs.tcl]]
+set auto_index(::vfs::tar::attributes) [list source [file join $dir tarvfs.tcl]]
+set auto_index(::vfs::tar::state) [list source [file join $dir tarvfs.tcl]]
 set auto_index(::vfs::tar::matchindirectory) [list source [file join $dir tarvfs.tcl]]
 set auto_index(::vfs::tar::stat) [list source [file join $dir tarvfs.tcl]]
 set auto_index(::vfs::tar::access) [list source [file join $dir tarvfs.tcl]]
@@ -134,6 +140,7 @@ set auto_index(::vfs::RegisterMount) [list source [file join $dir vfsUtils.tcl]]
 set auto_index(::vfs::unmount) [list source [file join $dir vfsUtils.tcl]]
 set auto_index(::vfs::states) [list source [file join $dir vfsUtils.tcl]]
 set auto_index(::vfs::attributes) [list source [file join $dir vfsUtils.tcl]]
+set auto_index(::vfs::attributeCantConfigure) [list source [file join $dir vfsUtils.tcl]]
 set auto_index(::vfs::haveMount) [list source [file join $dir vfsUtils.tcl]]
 set auto_index(::vfs::urlMount) [list source [file join $dir vfsUtils.tcl]]
 set auto_index(::vfs::fileUrlMount) [list source [file join $dir vfsUtils.tcl]]
@@ -166,6 +173,8 @@ set auto_index(::vfs::zip::Execute) [list source [file join $dir zipvfs.tcl]]
 set auto_index(::vfs::zip::Mount) [list source [file join $dir zipvfs.tcl]]
 set auto_index(::vfs::zip::Unmount) [list source [file join $dir zipvfs.tcl]]
 set auto_index(::vfs::zip::handler) [list source [file join $dir zipvfs.tcl]]
+set auto_index(::vfs::zip::attributes) [list source [file join $dir zipvfs.tcl]]
+set auto_index(::vfs::zip::state) [list source [file join $dir zipvfs.tcl]]
 set auto_index(::vfs::zip::matchindirectory) [list source [file join $dir zipvfs.tcl]]
 set auto_index(::vfs::zip::stat) [list source [file join $dir zipvfs.tcl]]
 set auto_index(::vfs::zip::access) [list source [file join $dir zipvfs.tcl]]
